tests/ui/mismatched_types/type-mismatch-in-extern-crate-56943.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch-in-extern-crate-56943.rs:7:27
   |
LL |     let _: aux_56943::S = aux_56943::S2;
   |            ------------   ^^^^^^^^^^^^^ expected `S`, found `S2`
   |            |
   |            expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
